--- a/config.json.example
+++ b/config.json.example
@@ -1,7 +1,7 @@
 {
 	"cmdPrefix": "!",
-	"allianceName": "<NONE>",
-	"guildName": "8-bit",
+	"allianceName": "<ROD>",
+	"guildName": "MOTHERLAND",
 	"username": "AO-Killbot",
 	"admins": [
 		""
