--- a/config.json.example
+++ b/config.json.example
@@ -4,9 +4,9 @@
 	"guildName": "8-bit",
 	"username": "AO-Killbot",
 	"admins": [
-		""
+		"210490842681442304"
 	],
-	"botChannel": "",
+	"botChannel": "407116046105837568",
 	"playingGame": "Albion Killboard Bot",
-	"token": ""
+	"token": "NDA3MTIzNTgyNDgxNzI3NDg4.DU9PYw.JZv31g1el1pQQ5mWatZZqTps2CY"
 }
